force-app/main/default/objects/WesLogin__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings controlling behaviour of the WES SSO solution. 
Primarily used by the WesLoginAndRegistrationController class.</description>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <description>API name of certificate used to sign JWT</description>
        <inlineHelpText>API name of certificate used to sign JWT</inlineHelpText>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <description>Client Id of the Connected App used by the class WesLoginAndRegistrationController to obtain an access token for the WES login</description>
        <inlineHelpText>Client Id of the Connected App used by the class WesLoginAndRegistrationController to obtain an access token for the WES login</inlineHelpText>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_OTP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use email as OTP fallback if no mobile exists on contact record</description>
        <inlineHelpText>Use email as OTP fallback if no mobile exists on contact record</inlineHelpText>
        <label>Email OTP</label>
        <type>Checkbox</type>
    </fields>
    <label>Wes Login</label>
</CustomObject>